<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.techito.libraro.viewmodel.SubscriptionPlanViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_screen">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_welcome_label"
                android:fontFamily="@font/outfit_regular"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@string/plan_choose_step_1"
                android:textColor="@color/app_color_1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/outfit_semibold"
                android:gravity="center"
                android:text="@string/pick_the_plan_that_fits_you_best"
                android:textColor="@color/app_color_1"
                android:textSize="18sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPlanMode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/select_plan_mode"
            app:boxStrokeColor="@color/color_DEDEDE"
            app:cursorColor="@color/black"
            app:endIconDrawable="@drawable/ic_down_arrow"
            app:endIconTint="@color/app_color_1"
            app:hintTextAppearance="@style/HintTextAppearance"
            app:hintTextColor="@color/edit_text_hint_color_545454"
            app:layout_constraintTop_toBottomOf="@+id/llHeader">

            <AutoCompleteTextView
                android:id="@+id/actvPlanMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:inputType="none"
                android:paddingVertical="12dp"
                android:text="@{viewModel.selectedPlanType.name}"
                android:textColor="@color/edit_text_color_323232"
                android:textSize="14sp"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpPlans"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/llIndicators"
            app:layout_constraintTop_toBottomOf="@+id/tilPlanMode" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_plan_selected"
            app:layout_constraintBottom_toBottomOf="@+id/vpPlans"
            android:layout_marginBottom="-3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/llIndicators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btnMakePayment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMakePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/btn_blue"
            android:fontFamily="@font/outfit_semibold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:onClick="@{() -> viewModel.onMakePaymentClicked()}"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:text="@string/make_payment"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <include
            android:id="@+id/layoutProgress"
            layout="@layout/layout_progress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>