<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shift"
            type="com.techito.libraro.model.Shift" />

        <variable
            name="position"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp">

        <LinearLayout
            android:id="@+id/llShiftHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/outfit_semibold"
                android:text='@{"SHIFT " + (position + 1)}'
                android:textColor="@color/color_82818A"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/ivDeleteShift"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_remove_circle" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilShiftName"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/shift_name"
            app:layout_constraintEnd_toStartOf="@+id/tilCustomName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llShiftHeader">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_medium"
                android:paddingVertical="13dp"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="30"
                android:text="@={shift.shiftName}"
                android:textColor="@color/edit_text_color_323232"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCustomName"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/custom_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tilShiftName"
            app:layout_constraintTop_toTopOf="@+id/tilShiftName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_medium"
                android:paddingVertical="13dp"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="30"
                android:text="@={shift.customName}"
                android:textColor="@color/edit_text_color_323232"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStartTime"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/start_time"
            app:layout_constraintEnd_toStartOf="@+id/tilEndTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilShiftName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:fontFamily="@font/outfit_medium"
                android:paddingVertical="13dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={shift.startTime}"
                android:textColor="@color/edit_text_color_323232"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEndTime"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/end_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tilStartTime"
            app:layout_constraintTop_toTopOf="@+id/tilStartTime">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:fontFamily="@font/outfit_medium"
                android:paddingVertical="13dp"
                android:inputType="text"
                android:text="@={shift.endTime}"
                android:textColor="@color/edit_text_color_323232"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDuration"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/duration_in_hrs"
            app:layout_constraintEnd_toStartOf="@+id/tilPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilStartTime">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_medium"
                android:paddingVertical="13dp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:text="@={shift.duration}"
                android:textColor="@color/edit_text_color_323232"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tilDuration"
            app:layout_constraintTop_toTopOf="@+id/tilDuration">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_medium"
                android:paddingVertical="13dp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:text="@={shift.price}"
                android:textColor="@color/edit_text_color_323232"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>